# ParlCards

./: .gitignore  build.py  pyproject.toml  railway.toml
app/: config.py  dependencies.py  main.py  templates_config.py
app/api/: bills.py  client.py  politicians.py  speeches.py  votes.py
app/cache/: manager.py  session.py  warmup.py
app/metrics/: attendance.py  bills_count.py  debate_participation.py  party_loyalty.py  percentiles.py
app/routers/: api.py  browse.py  home.py  politician.py
app/static/css/: custom.css
app/static/js/: card.js  search.js
app/templates/: base.html  browse.html  error.html  home.html  politician.html
app/templates/partials/: browse_list.html  card.html  loading.html  search_results.html  stat_bar.html
memory/: api_gotchas.md
scripts/: backfill_speech_summaries.py  warmup.py
